<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_signup"><u>No account? Go to sign up</u></string>
    <string name="menu_logout">Logout</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="button_apply">Apply</string>
    <string name="button_delete">Delete Account</string>

    <string name="already_have_account_tv">Already have an account? Go to Login</string>
    <string name="menu_profile">Profile</string>
</resources>
