<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginBottom="@dimen/grid_2"
                android:id="@+id/photoId"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:src="@drawable/default_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/photoId"
                android:paddingBottom="@dimen/grid_3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:paddingBottom="@dimen/grid_3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneTil"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:paddingBottom="@dimen/grid_3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                style="@style/standardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTil"
                android:layout_marginBottom="@dimen/grid_2"
                android:onClick="onApply"
                android:padding="@dimen/grid_2"
                android:text="@string/button_apply" />

            <Button
                android:id="@+id/deleteAccountButton"
                style="@style/standardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/applyButton"
                android:onClick="onDelete"
                android:text="@string/button_delete" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>